--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^4.8.2
   firebase_analytics: ^10.4.3
   flex_seed_scheme: ^1.4.0
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
