--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_analytics: ^10.4.3
   flex_seed_scheme: ^1.4.0
   shared_preferences: ^2.2.0
+  flutter_dotenv: ^5.1.0
+  mysql1: ^0.20.0
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +54,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -67,6 +70,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - assets/login_background.png
+  - .env
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
