--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   flex_seed_scheme: ^1.4.0
   shared_preferences: ^2.2.0
   flutter_dotenv: ^5.1.0
-  mysql1: ^0.20.0
+  mysql_client: ^0.0.27
   table_calendar: ^3.0.9
   intl: ^0.18.1
 
