--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,7 +71,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  - assets/login_background.png
+  - lib/assets/login_background.png
   - .env
   #   - images/a_dot_ham.jpeg
 
