--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   mysql_client: ^0.0.27
   table_calendar: ^3.0.9
   intl: ^0.18.1
+  pin_code_fields: ^8.0.1
 
 dev_dependencies:
   flutter_test:
